# OxyFEM

./: .gitignore  CMakeLists.txt  Licence.txt  README.md  bash.sh  main.cpp  parameters.txt  parameters.txt.example  writeOxy.sh
.github/workflows/: ci.yml
FREEFEMTESTS/: LaplaceP1.eps  laplace.edp  mesh.edp  mesher.edp  pb3.edp  test.edp
Meshs/: cercleN50.msh  cube.mesh  doubleSquareN10.msh  square.txt  square.txt.gmsh  square10.msh  square100.msh  square10x10.gmsh  square10x10.gmsh.gmsh  square15x15.msh  square18x18.msh  square19x19.msh  square1_2N50.msh  square2.msh  square20x20.msh  square2x2.msh  square5.msh  square50x50.msh  square5FEM.msh  test.msh  testSquare.msh
fortran/: assmat.f  tradcpp
include/: Edge.hpp  Element.hpp  FEMAssembly.hpp  FEMIntegrale.hpp  FEMParameters.hpp  FEMProblem.hpp  FEMUtilities.hpp  Mesh.hpp  Node.hpp  Quadrature.hpp  Solver.hpp  System.hpp  Types.hpp  forfun.h
python/: changeMeshs.py  compareResults.py  oxySol3D.py  sol3DFree.py  visuMesh.py
results/: solPb3.txt
src/: Edge.cpp  Element.cpp  FEMAssembly.cpp  FEMIntegrale.cpp  FEMParameters.cpp  FEMProblem.cpp  FEMUtilities.cpp  Mesh.cpp  Node.cpp  Quadrature.cpp  Solver.cpp  System.cpp
tests/: CMakeLists.txt  FEMProblem_test.cpp  graph.py  testmain.cpp
tests/include/: FEMTests.hpp
tests/references/: parametersCircle.txt  parametersDiffusion.txt  parametersSinSin.txt  refCircle.txt  refNeDir.txt  refNeumann.txt  resultsDiffusion.txt  resultsSinSin.txt  resultsUexSin.txt
tests/src/: FEMProblem2_test.cpp  FEMProblem_test.cpp  FEMProblem_testDiffusion.cpp  FEMTests.cpp  testMainDiffusion.cpp  testMainSinSin.cpp  testmain.cpp  testmainCircle.cpp
